# anastomosis-scoring

./: .gitignore  README.md  app.py  pyproject.toml
ali_core/: __init__.py  config.py  features.py  preprocessing.py  utils.py
scoring_core/: __init__.py  features.py  pipeline.py  plotting.py  preprocessing.py  utils.py
static/: app.js  style.css
templates/: index.html
